[gd_scene load_steps=9 format=3 uid="uid://bnlmelc5fprjb"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_mrvog"]
[ext_resource type="LabelSettings" uid="uid://duy06rtekejv1" path="res://graphics/ui/title_label_settings.tres" id="2_ho0co"]
[ext_resource type="Texture2D" uid="uid://b0ws8whmsky40" path="res://graphics/ui/rounded_panel.png" id="2_j2yx1"]
[ext_resource type="PackedScene" uid="uid://dnet3v7h6r031" path="res://scenes/button.tscn" id="5_4ohmx"]
[ext_resource type="LabelSettings" uid="uid://dm8c76cytfbun" path="res://graphics/ui/subtitle_label_settings.tres" id="5_u3xu6"]
[ext_resource type="Theme" uid="uid://btt25erut8jc2" path="res://graphics/ui/button_theme.tres" id="6_l57qt"]
[ext_resource type="Script" path="res://scripts/credits.gd" id="6_u33p6"]
[ext_resource type="PackedScene" uid="uid://ddasgakxbsmt0" path="res://scenes/mute_button.tscn" id="9_a5ees"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_mrvog")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.572549)

[node name="MainMenuUI" type="NinePatchRect" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.0
offset_top = -20.0
offset_right = 329.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_j2yx1")
region_rect = Rect2(0, 0, 1800, 608.951)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 30
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Title" type="Label" parent="MainMenuUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.5
offset_top = -182.0
offset_right = 244.5
offset_bottom = -52.0
grow_horizontal = 2
text = "Lingo Loop"
label_settings = ExtResource("2_ho0co")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" parent="MainMenuUI" instance=ExtResource("5_4ohmx")]
unique_name_in_owner = true
layout_mode = 1
offset_left = -290.0
offset_right = -110.0
text = "Play Game"

[node name="HowToPlayButton" parent="MainMenuUI" instance=ExtResource("5_4ohmx")]
unique_name_in_owner = true
layout_mode = 1
button_type = 6
text = "How To Play"

[node name="CreditsButton" parent="MainMenuUI" instance=ExtResource("5_4ohmx")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 110.0
offset_right = 290.0
button_type = 7
text = "Credits"

[node name="HowToPlayUI" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.0
offset_top = -166.0
offset_right = 329.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_j2yx1")
region_rect = Rect2(0, 0, 1800, 608.951)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 30
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Title" type="Label" parent="HowToPlayUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.5
offset_top = -118.0
offset_right = 244.5
offset_bottom = 12.0
grow_horizontal = 2
text = "How To Play"
label_settings = ExtResource("5_u3xu6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HowToPlay" type="RichTextLabel" parent="HowToPlayUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 11.0
offset_right = -12.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_l57qt")
theme_override_constants/line_separation = -8
bbcode_enabled = true
text = "[font_size=32][center][color=#029ae0]Drag[/color] words to connect them: each word must [color=#029ae0]start[/color] with the [color=#029ae0]last letter[/color] of the one before it.
Ca[color=#e0cd02]t[/color] -> [color=#e0cd02]t[/color]re[color=#e04802]e[/color] -> [color=#e04802]e[/color]g[color=#b702e0]g[/color] -> [color=#b702e0]g[/color]iraffe

finish the loop by connecting the [color=#029ae0]last[/color] word back to the [color=#029ae0]first[/color]: [color=#e0cd02]e[/color]m[color=#b702e0]u[/color] -> [color=#b702e0]u[/color]mbrell[color=#e04802]a[/color] -> [color=#e04802]a[/color]ppl[color=#e0cd02]e[/color] 

the [color=#029ae0]longer[/color] the loop, the [color=#029ae0]higher[/color] the score.
can you make it all the way to the end?[/center][/font_size]"
meta_underlined = false
script = ExtResource("6_u33p6")

[node name="BackButton" parent="HowToPlayUI" instance=ExtResource("5_4ohmx")]
layout_mode = 1
offset_top = 184.0
offset_bottom = 248.0
button_type = 8
text = "Back"

[node name="CreditsUI" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.0
offset_top = -166.0
offset_right = 329.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_j2yx1")
region_rect = Rect2(0, 0, 1800, 608.951)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 30
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Title" type="Label" parent="CreditsUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.5
offset_top = -118.0
offset_right = 244.5
offset_bottom = 12.0
grow_horizontal = 2
text = "Credits"
label_settings = ExtResource("5_u3xu6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="RichTextLabel" parent="CreditsUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 11.0
offset_right = -12.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_l57qt")
theme_override_constants/line_separation = -8
bbcode_enabled = true
text = "[font_size=32][center]made by [color=#029ae0]O.b. Studios[/color]
for the gmtk game jam 2025

[b][color=#029ae0]Music[/color][/b]
[url=incompetech.com]\"Late Night Radio\" Kevin MacLeod[/url]
[url=http://creativecommons.org/licenses/by/4.0/]Licensed under Creative Commons: By Attribution 4.0 License[/url]

[b][color=#029ae0]Font[/color][/b]
[url=https://github.com/nguyentype/vinasans]Copyright 2023 The Vina Sans Project Authors[/url]
[url=http://scripts.sil.org/OFL]Licensed under SIL OFL 1.1[/url]

[b][color=#029ae0]UI Assets[/color][/b]
[url=https://prinbles.itch.io/solid]Solid by Prinbles[/url]

[/center][/font_size]

"
meta_underlined = false
script = ExtResource("6_u33p6")

[node name="BackButton" parent="CreditsUI" instance=ExtResource("5_4ohmx")]
layout_mode = 1
offset_top = 184.0
offset_bottom = 248.0
button_type = 8
text = "Back"

[node name="MuteButton" parent="." instance=ExtResource("9_a5ees")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = -16.0
grow_vertical = 0
